# scratch_learn

./: CMakeLists.txt  scratch_learn.code-workspace
src/: CMakeLists.txt  common.h  data_bus.c  data_bus.h  init_controller.c  init_controller.h  pico_i2c.c  pico_i2c.h  pico_led.c  pico_led.h  pico_spi.c  pico_spi.h  pico_types.h  scratch.c  temp_sensor.c  temp_sensor.h
